# TAN

./: .gitignore  .gitmodules  LICENSE.txt  README.md  ReleaseNotes.txt  build_test.jenkinsfile  version.h
amf/public/common/: AMFFactory.cpp  AMFFactory.h  Thread.cpp
amf/public/common/Linux/: ThreadLinux.cpp
amf/public/include/core/: Factory.h
tan/common/: FileUtility.cpp  FileUtility.h  RegisterBrowser.cpp  RegisterBrowser.h  StringUtility.cpp  StringUtility.h  Timer.h  Utilities.h  common.cpp  common.h  cpucaps.h  fifo.cpp  fifo.h  wav.cpp  wav.h
tan/samples/proj/cmake/Ambisonic1stOrderDecoder/: CMakeLists.txt
tan/samples/proj/cmake/Ambisonic1stOrderEncoder/: CMakeLists.txt
tan/samples/proj/cmake/Ambisonic2ndOrderEncoder/: CMakeLists.txt
tan/samples/proj/cmake/AmbisonicVRDecoder/: CMakeLists.txt
tan/samples/proj/cmake/CLKernelPreprocessor/: CLKernelPreprocessor.cmake  CMakeLists.txt
tan/samples/proj/cmake/FileToHeader/: CMakeLists.txt
tan/samples/proj/cmake/GPUUtilities/: CMakeLists.txt
tan/samples/proj/cmake/ReverbMixer/: CMakeLists.txt
tan/samples/proj/cmake/RoomAcousticQT/: CMakeLists.txt
tan/samples/proj/cmake/RoomAcoustics/: CMakeLists.txt
tan/samples/proj/cmake/TrueAudioVR/: CMakeLists.txt
tan/samples/src/ADL/: ADLquery.cpp
tan/samples/src/Ambisonic1stOrderDecoder/: Ambisonic1stOrderDecoder.cpp
tan/samples/src/Ambisonic1stOrderEncoder/: Ambisonic1stOrderEncoder.cpp
tan/samples/src/Ambisonic2ndOrderEncoder/: Ambisonic2ndOrderEncoder.cpp
tan/samples/src/AmbisonicVRDecoder/: AmbisonicVRDecoder.cpp  targetver.h
tan/samples/src/CLKernelPreprocessor/: CLKernelPreprocessor.cpp  stdafx.h  targetver.h
tan/samples/src/FileToHeader/: FileToHeader  FileToHeader.cpp  stdafx.cpp  stdafx.h
tan/samples/src/GPUUtilities/: GPUUtilities.cpp  GpuUtilities.h  stdafx.h  targetver.h
tan/samples/src/ReverbMixer/: ReverbMixer.cpp  ReverbProcessor.cpp  ReverbProcessor.h
tan/samples/src/ReverbMixer/QTObject/: QTReverbMixerMainWindow.cpp  QTSaveResponse.cpp
tan/samples/src/RoomAcousticQT/: FileUtility.cpp  FileUtility.h  RegisterBrowser.cpp  RoomAcoustic.cpp  RoomAcoustic.h  RoomAcousticQT.cpp  RoomAcousticQT.h  main.cpp
tan/samples/src/RoomAcousticQT/QTObject/: QTExportResponse.cpp  QTExportResponse.h  QTRoomAcousticConfig.cpp  QTRoomAcousticConfig.h  QTRoomAcousticGraphic.cpp  QTRoomAcousticGraphic.h
tan/samples/src/RoomAcousticQT/UI/: RoomAcousticConfig.ui  RoomAcousticConfig_NoRTQ.ui
tan/samples/src/RoomAcoustics/: AudioVR.cpp  AudioVR.h  RoomAcoustics.cpp  RoomAcoustics.h  RoomAcousticsDlg.cpp  RoomAcousticsDlg.h  RoomWindow.cpp  RoomWindow.h
tan/samples/src/TrueAudioVR/: TrueAudioVR.cpp  TrueAudioVR.h  cpucaps.h  dllmain.cpp  targetver.h
tan/samples/src/TrueAudioVR/Kernels/: Fill.cl  Fill.metal  GenerateRoomResponse.cl  GenerateRoomResponse.metal
tan/samples/src/common/: AMFAudio3D.cpp  AMFAudio3D.h  AlsaPlayer.cpp  AlsaPlayer.h  Audio3DAMF.cpp  Audio3DAMF.h  Audio3DOpenCL.cpp  Audio3DOpenCL.h  CLAudio3D.cpp  CLAudio3D.h  ConvUtilities.c  GpuUtils.cpp  GpuUtils.h  IAudio3D.h  IWavPlayer.h  PortPlayer.cpp  PortPlayer.h  PulsePlayer.cpp  PulsePlayer.h  SimpleVRaudio.cpp  SimpleVRaudio.h  WASAPIPlayer.cpp  WASAPIPlayer.h  WASAPIUtils.cpp  WASAPIUtils.h  WasAPI.h  common.cpp  common.h  threads.h  utilities.c  utilities.h  wav.cpp
tan/tanlibrary/include/: TrueAudioNext.h
tan/tanlibrary/include/amf/: TrueAudioNext.h
tan/tanlibrary/include/opencl/: TrueAudioNext.h
tan/tanlibrary/proj/cmake/Graal/: CMakeLists.txt
tan/tanlibrary/proj/cmake/TAN/: CMakeLists.txt
tan/tanlibrary/proj/cmake/TrueAudioNext/: CMakeLists.txt
tan/tanlibrary/proj/cmake/amf/: CMakeLists.txt
tan/tanlibrary/proj/cmake/clFFT/: CMakeLists.txt
tan/tanlibrary/src/Graal/: CABuffer copy.h  CABuffer.h  GraalConv.cpp  GraalConv.hpp  GraalConvAMF.cpp  GraalConvAMF.hpp  GraalConvOCL.cpp  GraalConvOCL.hpp  GraalConv_clFFT.cpp  GraalConv_clFFT.hpp  GraalFHT.cl  GraalFHT.metal  GraalInternal.h  GraalSampleBuffer.h  GraalUtil.metal  amdFFT_conv_kernels.metal  amdFHT.cpp  amdFHT.h  amdFIR_kernels.metal
tan/tanlibrary/src/Graal/GraalCLUtil/: GraalCLUtil.hpp  GraalFile.hpp  GraalUtil.hpp
tan/tanlibrary/src/Graal/OclKernels/: CLKernel_GraalFHT.h  CLKernel_GraalUtil.h  CLKernel_amdFFT_conv_kernels.h  amdFIR_kernels.h
tan/tanlibrary/src/TrueAudioNext/: version.rc
tan/tanlibrary/src/TrueAudioNext/IIRfilter/: IIRfilter.metal  IIRfilterImpl.cpp  IIRfilterImpl.h  MetalKernel_IIRfilter.h
tan/tanlibrary/src/TrueAudioNext/converter/: Converter.metal  ConverterImpl.cpp  ConverterImpl.h  MetalKernel_Converter.h
tan/tanlibrary/src/TrueAudioNext/convolution/: ConvolutionImpl.cpp  ConvolutionImpl.h  Crossfading.metal  FilterState.h  GraalArgs.h  MetalKernel_Crossfading.h  MetalKernel_SimpleCopy.h  MetalKernel_TimeDomainConvolution.h  SimpleCopy.metal  (+4 more)
tan/tanlibrary/src/common/: OCLHelper.cpp  OCLHelper.h  cpucaps.h
tan/tests/proj/cmake/TALibDopplerTest/: CMakeLists.txt
tan/tests/src/TALibDopplerTest/: TALibDopplerTest.cpp  stdafx.h
tan/tests/src/TALibTestConvolution/: TALibTestConvolution.cpp
tan/tests/src/TALibVRTest/: TALibVRTest.cpp  stdafx.h
tan/tests/src/TAlibTestDynamicChannelConvolution/: TALibTestDynamicChannelConvolution.cpp
tan/tests/src/TanCPUTest/: TanCPUTest.cpp
tan/tests/src/TanDeviceResources/: TanDeviceResources.cpp
tan/tests/src/common/: AudioBuffer.cpp  AudioBuffer.h  TANTestSuitsParam.cpp  TANTestSuitsParam.h  common.cpp  common.h
utils/cmake/: FileToHeader.cmake  test_OpenCL.cmake  test_TAN.cmake  test_amf.cmake
utils/common/: Allocators.h  Debug.h  Exceptions.h  FileUtility.cpp  FileUtility.h  Log.h  OCLHelper.cpp  OCLHelper.h  StringUtility.cpp  StringUtility.h  Timer.h  Utilities.h  cpucaps.cpp  fifo.cpp  fifo.h  wav.cpp  wav.h
utils/proj/cmake/CLKernelPreprocessor/: CMakeLists.txt
utils/proj/cmake/FFTWCache/: CMakeLists.txt
utils/proj/cmake/FileToHeader/: CMakeLists.txt
utils/src/CLKernelPreprocessor/: CLKernelPreprocessor.cpp  stdafx.cpp
utils/src/FFTWCache/: FFTWCache.cpp
utils/src/FileToHeader/: FileToHeader.cpp
(+41 files in other folders)
